--- a/console/app/templates/auth/login.html
+++ b/console/app/templates/auth/login.html
@@ -18,7 +18,7 @@
     <div class="banner">
         <div class="widthLimit">
             <h1>
-                <span><i class="fa fa-skyatlas"></i> iGuard</span>
+                <span><i class="fa fa-skyatlas"></i> FlASk-UI</span>
             </h1>
         </div>
     </div>
