--- a/console/app/templates/main/menu.html
+++ b/console/app/templates/main/menu.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 
-{% block main_test_active %}act{% endblock %}
+{% block main_menu_active %}act{% endblock %}
 
 {% block main_content %}
 
