--- a/console/app/templates/layout.html
+++ b/console/app/templates/layout.html
@@ -15,15 +15,23 @@
 
 {% block navbar %}
     <div class="header">
-        <div class="topnav">
+        <div class="header-nav">
             <h1>
-                <a href="/" class="logo"><i class="fa fa-skyatlas"></i> FM</a>
+                <a href="/" class="logo"><i class="fa fa-skyatlas"></i> Flask-TC</a>
             </h1>
-            <div class="top-panel">
+            <div class="header-panel">
                 {% if current_user.is_authenticated %}
-                    <ul class="top-menu pandect-menu">
-                        <li class="custom-item {% block main %}{% endblock %}">
-                            <a href="#"><i class="fa fa-users"></i> Main</a>
+                    <ul class="header-menu panel-menu">
+                        <li class="{% block main %}{% endblock %}">
+                            <a href="{{ url_for('main.index') }}"><i class="glyphicon glyphicon-th-list"></i> 表格</a>
+                        </li>
+
+                        <li class="">
+                            <a href="#"><i class="glyphicon glyphicon-file"></i> 表单</a>
+                        </li>
+
+                        <li class="">
+                            <a href="#"><i class="glyphicon glyphicon-asterisk"></i> 其他</a>
                         </li>
                     </ul>
                 {% endif %}
@@ -39,14 +47,11 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">账号信息</a></li>
-                                {#                                <li><a href="#">修改密码</a></li>#}
+                                <li><a href="#">修改密码</a></li>
                                 <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
                             </ul>
                         </li>
                     {% endif %}
-                </ul>
-                <ul class="top-menu user-menu">
-                    <li><a href="#"></a></li>
                 </ul>
             </div>
 
@@ -55,43 +60,6 @@
 {% endblock %}
 
 {% block content %}
-    <div class="aside">
-        <div class="menu">
-            <h2><span>Main</span></h2>
-            <hr class="line-mod">
-            <dl class="menu-list">
-
-
-                <dd class="act">
-                    <a class="menu-lv2 menu-lv2-toggle {% block main_index_open %}{% endblock %}"
-                       href="javascript:void(0);">
-                        <span>Dashboard</span>
-                        <i class="white-down-icon"></i>
-                    </a>
-
-                    <ul class="menu-sub menu-sub-disbale">
-                        <li>
-                            <a href="{{ url_for('main.dashboard') }}"
-                               class="menu-lv3 {% block main_index_active %}{% endblock %}">
-                                <i class="ico-dot"></i><span>dashboardV1.0</span>
-                            </a>
-                        </li>
-
-                    </ul>
-                </dd>
-
-                <dd>
-                    <a href="{{ url_for('main.test') }}" class="menu-lv2 {% block main_test_active %}{% endblock %}">
-                        <span>test</span>
-                    </a>
-                </dd>
-
-
-            </dl>
-        </div>
-        <a href="javascript:void(0)" class="btn-fold-menu" title="收起">收起</a>
-    </div>
-
     <div class="container-fluid-base" style="left: 0">
         {% block base_content %}{% endblock %}
     </div>
