--- a/console/app/templates/main.html
+++ b/console/app/templates/main.html
@@ -35,7 +35,11 @@
                                class="aside-menu-v3 {% block main_index_active %}{% endblock %}">
                                 <i class="ico-dot"></i><span>表格-01</span>
                             </a>
+                            <a href="#" class="aside-menu-v3">
+                                <i class="ico-dot"></i><span>表格-02</span>
+                            </a>
                         </li>
+
 
                     </ul>
                 </dd>
