--- a/console/app/static/css/app.css
+++ b/console/app/static/css/app.css
@@ -2,7 +2,7 @@ body {
     padding: 0;
     margin: 0;
     line-height: 1;
-    font: 12px Helvetica Neue, Helvetica, PingFang SC, \5FAE\8F6F\96C5\9ED1, Tahoma, Arial, sans-serif;
+    font-size: 12px;
 }
 
 body, button, dd, dl, dt, form, h1, h2, h3, h4, h5, h6, input, legend, li, ol, p, select, table, textarea, ul {
@@ -11,7 +11,7 @@ body, button, dd, dl, dt, form, h1, h2, h3, h4, h5, h6, input, legend, li, ol, p
 }
 
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: PingFangSC-Light, 'helvetica neue', 'hiragino sans gb', tahoma, 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif;
+    font-family: PingFangSC-Light,'helvetica neue','hiragino sans gb',tahoma,'microsoft yahei ui','microsoft yahei',simsun,sans-serif;
 }
 
 body .toast-top-right {
