--- a/console/app/static/css/layout/header.css
+++ b/console/app/static/css/layout/header.css
@@ -58,7 +58,7 @@
 .header-menu > li.cur:hover > a,
 .header-menu > li.cur > a,
 .header-menu > li:hover > a {
-    color: #57a5ff;
+    color: #3d91ff;
     text-decoration: none;
     font-weight: 700;
 }
