--- a/console/app/templates/main.html
+++ b/console/app/templates/main.html
@@ -17,8 +17,12 @@
 {% block page_content %}
     <div class="aside">
         <div class="aside-menu">
-            <h2><span>表格</span></h2>
-            <hr class="line-mod">
+            <div class="aside-head">
+                <div class="aside-head-logo">
+                    <span class="aside-head-logo-ficon"><i class="fa fa-skyatlas"></i></span>
+                    <h3 class="aside-head-title">表格</h3>
+                </div>
+            </div>
             <dl class="aside-menu-dl">
 
 
