--- a/console/app/templates/main/index.html
+++ b/console/app/templates/main/index.html
@@ -1,7 +1,6 @@
 {% extends "main.html" %}
-
-{% block main_index_open %}open{% endblock %}
-{% block main_index_active %}act{% endblock %}
+{% set active_page = 'index' %}
+{% set menuv2_page_open = 'open' %}
 
 {% block main_content %}
     <div class="row">
