--- a/console/app/templates/main/menu.html
+++ b/console/app/templates/main/menu.html
@@ -1,6 +1,5 @@
 {% extends "main.html" %}
-
-{% block main_menu_active %}act{% endblock %}
+{% set active_page = 'menu' %}
 
 {% block main_content %}
 
