--- a/console/app/static/css/app.css
+++ b/console/app/static/css/app.css
@@ -11,7 +11,7 @@ body, button, dd, dl, dt, form, h1, h2, h3, h4, h5, h6, input, legend, li, ol, p
 }
 
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: PingFangSC-Light,'helvetica neue','hiragino sans gb',tahoma,'microsoft yahei ui','microsoft yahei',simsun,sans-serif;
+    font-family: PingFangSC-Light, 'helvetica neue', 'hiragino sans gb', tahoma, 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif;
 }
 
 body .toast-top-right {
@@ -72,4 +72,29 @@ a, a:hover, a:focus, a:active {
 .console-title {
     padding: 16px 0;
     min-height: 48px;
+}
+
+label {
+    font-weight: normal;
+}
+
+label.control-label {
+    font-weight: normal;
+    font-size: 12px;
+    color: #666;
+}
+
+.top-line {
+    border-top: 1px solid #eee;
+    padding-top: 10px;
+}
+
+.bline-dotted {
+    border-bottom: 1px dotted #000;
+}
+
+.text-explode {
+    color: #CCC !important;
+    font-weight: normal !important;
+    margin: 0 4px !important;
 }
