--- a/console/app/templates/main/index.html
+++ b/console/app/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
-{% set active_page = 'index' %}
-{% set menuv2_page_open = 'open' %}
+{% set active = 'index' %}
+{% set menu_open = 'open' %}
 
 {% block main_content %}
     <div class="row">
