--- a/console/app/templates/base.html
+++ b/console/app/templates/base.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% import "macro/macro_content.html" as content %}
 
 {% block base_content %}
     {% include "toast_success_or_error.html" %}
