--- a/console/app/templates/main/index.html
+++ b/console/app/templates/main/index.html
@@ -5,10 +5,7 @@
 {% block main_content %}
     <div class="row">
         <div class="col-sm-12">
-            <div class="console-title clearfix bline" style="min-height: 50px">
-                <div class="pull-left"><h4>文件列表</h4></div>
-
-            </div>
+            {{ content.panel_title('表格') }}
         </div>
 
         <div class="col-sm-12" style="margin-top: 20px">
