--- a/console/app/templates/main/menu.html
+++ b/console/app/templates/main/menu.html
@@ -1,6 +1,12 @@
 {% extends "main.html" %}
+
 {% set active = 'menu' %}
 
 {% block main_content %}
+    <div class="row">
+        <div class="col-sm-12">
+            {{ content.panel_title('Flask-Uploads') }}
+        </div>
 
+    </div>
 {% endblock %}
