--- a/console/app/templates/base.html
+++ b/console/app/templates/base.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% import "macro/macro_content.html" as content %}
+{% import "macro/macro_form.html" as render_form %}
 
 {% block base_content %}
     {% include "toast_success_or_error.html" %}
