--- a/console/app/templates/layout.html
+++ b/console/app/templates/layout.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}FM{% endblock %}
+{% block title %}Flask-tc-ui{% endblock %}
 
 {% block head %}
 
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav navbar-right pull-right" style="margin: 0;">
                     {% if current_user.is_authenticated %}
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <a href="#" class="dropdown-toggle" data-hover="dropdown">
                                 {% if current_user.is_authenticated %}
                                     <i class="glyphicon glyphicon-user"></i>&nbsp;{{ current_user.username }}
                                 {% endif %} <b class="caret"></b>
