--- a/console/app/templates/main/menu.html
+++ b/console/app/templates/main/menu.html
@@ -8,5 +8,27 @@
             {{ content.panel_title('Flask-Uploads') }}
         </div>
 
+        <form method="post" class="form-horizontal" enctype="multipart/form-data">
+
+
+            <div class="col-sm-12 row" style="margin-top: 5px">
+
+                {{ form.hidden_tag() }}
+
+                <div class="form-group">
+                    <div class="col-sm-2">{{ render_form.input_label(form.file) }}</div>
+                    <div class="col-sm-3">{{ form.file }}</div>
+                </div>
+
+            </div>
+
+            <div class="col-sm-12 row">
+                <div class="top-line"></div>
+                <div class="form-group">
+                    <div class="col-sm-2">{{ form.submit(class='btn btn-primary pull-right') }}</div>
+                </div>
+
+            </div>
+        </form>
     </div>
 {% endblock %}
