--- a/console/app/templates/main/menu.html
+++ b/console/app/templates/main/menu.html
@@ -2,6 +2,7 @@
 {% import "macro/macro_content.html" as content %}}
 
 {% set active = 'menu' %}
+{% set menu_open = 'menu' %}
 
 {% block main_content %}
     <div class="row">
