--- a/console/app/static/css/layout/aside.css
+++ b/console/app/static/css/layout/aside.css
@@ -169,7 +169,7 @@
     padding: 15px 0 52px 0;
     text-align: center;
     box-sizing: border-box;
-    background-color: #D9DEE4;
+    background-color: #f0f6f6;
     border-bottom: 1px solid #f0f2f5;
 }
 
