--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -34,7 +34,7 @@ li {
     padding: 0 20px;
 }
 
-console-title h4 {
+.console-title h4 {
     margin-top: 6px !important;
     margin-bottom: 6px !important;
 }
