change file localtion

--- a/app/static/css/comment/btn.css
+++ b/app/static/css/comment/btn.css
@@ -27,6 +27,15 @@
     background-color: #09c;
 }
 
+.btn-primary.active.focus,
+.btn-primary.active:focus,
+.btn-primary.active:hover,
+.btn-primary:active.focus,
+.btn-primary:active:focus,
+.btn-primary:active:hover,
+.open>.dropdown-toggle.btn-primary.focus,
+.open>.dropdown-toggle.btn-primary:focus,
+.open>.dropdown-toggle.btn-primary:hover,
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active {
