--- a/app/static/css/layout/aside.css
+++ b/app/static/css/layout/aside.css
@@ -66,7 +66,7 @@
 }
 
 .aside-menu-dl .aside-menu-v2:hover {
-    background-color: rgb(191, 223, 255);
+    background-color: #d5e2ef;
     color: #3399ff;
 }
 
@@ -109,11 +109,11 @@
 }
 
 .aside-menu-v2.act {
-    background-color: rgb(191, 223, 255);
+    background-color: #d5e2ef;
 }
 
 .aside-menu-v2.open {
-    background-color: rgb(191, 223, 255);
+    background-color: #d5e2ef;
 }
 
 .aside-menu-dl .ico-dot {
