--- a/app/static/css/layout/header.css
+++ b/app/static/css/layout/header.css
@@ -1,6 +1,7 @@
 .header-nav {
     padding: 0 0 0 199px;
     background-color: #373d41;
+    min-width: 1000px;
 }
 
 .header-nav h1 {
@@ -9,7 +10,7 @@
     position: relative;
     float: left;
     height: 50px;
-    margin-left: -179px;
+    margin-left: -200px;
     color: #f2f3f4;
 }
 
@@ -29,7 +30,6 @@
     height: 50px;
     position: relative;
     z-index: 165;
-    margin-right: 1px;
 }
 
 .header-menu.panel-menu {
@@ -83,4 +83,31 @@
 
 .header .nav > li > a {
     color: #fff;
+}
+
+.header .navbar-nav > li {
+    float: left;
+}
+
+.header .navbar-nav > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.header .navbar-right .dropdown-menu {
+    right: 0;
+    left: auto;
+}
+
+@media (max-width: 767px) {
+    .header .nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
+        position: relative;
+        left: 68px;
+    }
+
+    .navbar-nav .open .dropdown-menu {
+        background-color: #fff;;
+        border: 1px solid #ccc;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    }
 }
